feat: Refactor authorization: switch from role-based filtering to permission-based filtering